# Best-Service

./: .env  Cargo.toml  Front end .md  SQLinfo.md  commands.md  main.md  package-lock.json
bestservice-frontend/: package-lock.json  package.json
bestservice-frontend/public/: index.html
bestservice-frontend/src/: App.js  dashboard.js  fontend.md  index.css
bestservice-frontend/src/api/: api.js
bestservice-frontend/src/components/: BikeServiceCenters.js  BikeServices.js  Dashboard.js  ForgotPassword.js  Home.js  Login.js  Navbar.js  Register.js  RegisterServiceCenter.js  RegisterUser.js  ServiceCategory.js  ServiceCenterDashboard.js  ServicePage.js  ServiceProviderList.js  ServicesDashboard.js
bestservice-frontend/src/components/shared/: AuthBackground.js  PageBackground.js
bestservice-frontend/src/services/: api.js
bestservice-frontend/src/styles/: main.css  serviceCenterDashboard.css
public/: index.html
src/: auth.rs  db.rs  main.rs  models.rs  routes.rs
